--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,13 +1,13 @@
 env: dev
 mysql:
     user: root
-    password: 123456
+    password: cloudadmin
     db: go
-    chaSet: utf8
-    host: 127.0.0.1
+    chaSet: utf8mb4
+    host: 172.16.81.89
     port: 3306
 redis:
-    host: 127.0.0.1
+    host: 172.16.81.89
     port: 6379
 token:
     type: jwt #token、jwt
